Add /api/living endpoint for probably living calculator
